--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -203,6 +203,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="."
+                android:onClick="dotClick"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
